[ Monterey ] TestWebKitAPI.WebSocket.PageWithAttributedBundleIdentifierDestroyed (API-test) is a constant timeout https://bugs.webkit.org/show_bug.cgi?id=233224

Reviewed by Darin Adler.

Source/WebKit:

Using NSURLSession._attributedBundleIdentifier requires the com.apple.private.network.socket-delegate entitlement,
which can't be signed into the network process with the public SDK.

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(WebKit::NetworkSessionCocoa::addWebPageNetworkParameters):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/WebSocket.mm:
(TestWebKitAPI::TEST):




Canonical link: https://commits.webkit.org/245431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287275 268f45cc-cd09-0410-ab3c-d52691b4dbfc